--- a/layouts/chrome/menu.html
+++ b/layouts/chrome/menu.html
@@ -1,13 +1,13 @@
 <div class="navbar">
         <div class="row navbar" id="landing-navigation">
             <a class="toggle" gumby-trigger="#landing-navigation > ul" href="#"><i class="icon-menu"></i></a>
-            <h1 class="four columns logo">
-                <a href="/">
-                    <img src="images/glukit.png" gumby-retina="">
+            <h1 class="ten columns logo">
+                <a href="http://blog.mygluk.it/">
+                    <img src="images/logo-blog.png" gumby-retina="">
                 </a>
             </h1>
-            <ul class="eight columns">
-                <li><a href="http://mygluk.it">Glukit</a>
+            <ul class="push_two one columns">
+                <li><a href="http://www.mygluk.it"><i class="icon-rocket"></i> Glukit</a>
                 </li>                                
             </ul>
         </div>
