--- a/layouts/index.html
+++ b/layouts/index.html
@@ -20,20 +20,15 @@
 <div class="container">
   <div class="content">
 
-  <div class="page-header">
-    <h1>They shall forever be drafts. </h1>
-  </div>
+  {{ range .Data.Pages }}
+    <div class="row">
+    <!-- CONTENT -->   
+      <h2>{{ .Title }}</h2>
 
-  <div class="row-fluid">
-    <div class="span12">
-
-      <ul class="posts">
-        {{ range .Data.Pages }}        
-          <li><span>{{ .Date.Format "January 2 2006" }}</span><p><a href="{{.RelPermalink }}">{{ .Title }}</a></p></li>
-        {{ end }}
-      </ul>
-           
-    </div>  
-  </div>
+       <div class="post content">
+        {{ .Content }}
+       </div>   
+    </div>       
+  {{ end }}
 
 {{ template "chrome/footer.html" }}
