--- a/layouts/chrome/meta.html
+++ b/layouts/chrome/meta.html
@@ -1,5 +1,5 @@
     <meta charset="utf-8">
-    <title>The Glukit Blog!</title>
+    <title>The Glukit Blog</title>
     
     <meta name="author" content="Alexandre Normand">
 
