--- a/layouts/chrome/includes.html
+++ b/layouts/chrome/includes.html
@@ -1,3 +1,14 @@
     <link rel="stylesheet" href="/css/gumby.css">
     <!-- <link rel="stylesheet" href="css/style.css"> -->
     <script src="/bower_components/gumby/js/libs/modernizr-2.6.2.min.js"></script>
+    <script gumby-touch="js/libs" src="bower_components/gumby/js/libs/gumby.js"></script>
+    <script src="bower_components/gumby/js/libs/ui/gumby.retina.js"></script>
+    <script src="bower_components/gumby/js/libs/ui/gumby.fixed.js"></script>
+    <script src="bower_components/gumby/js/libs/ui/gumby.skiplink.js"></script>
+    <script src="bower_components/gumby/js/libs/ui/gumby.toggleswitch.js"></script>
+    <script src="bower_components/gumby/js/libs/ui/gumby.checkbox.js"></script>
+    <script src="bower_components/gumby/js/libs/ui/gumby.radiobtn.js"></script>
+    <script src="bower_components/gumby/js/libs/ui/gumby.tabs.js"></script>
+    <script src="bower_components/gumby/js/libs/ui/gumby.navbar.js"></script>
+    <script src="bower_components/gumby/js/libs/ui/jquery.validation.js"></script>
+    <script src="bower_components/gumby/js/libs/gumby.init.js"></script>
