Add Links to Posts on Index.

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,7 +1,7 @@
 {{ template "chrome/header.html" . }}
 <div class="row">
     <!-- CONTENT -->   
-      <h1>{{ .Title }} <span class="date">[{{ .Date.Format "January 2 2006" }}]</span></h1>
+      <h2>{{ .Title }}</h2>
 
        <div class="post content">
         {{ .Content }}
