--- a/layouts/chrome/menu.html
+++ b/layouts/chrome/menu.html
@@ -3,7 +3,7 @@
             <a class="toggle" gumby-trigger="#landing-navigation > ul" href="#"><i class="icon-menu"></i></a>
             <h1 class="ten columns logo">
                 <a href="http://blog.mygluk.it/">
-                    <img src="images/logo-blog.png" gumby-retina="">
+                    <img src="/images/logo-blog.png" gumby-retina="">
                 </a>
             </h1>
             <ul class="push_two one columns">
