--- a/layouts/index.html
+++ b/layouts/index.html
@@ -21,7 +21,7 @@
   {{ range .Data.Pages }}
     <div class="row">
     <!-- CONTENT -->   
-      <h2>{{ .Title }}</h2>
+      <h2><a href="{{.RelPermalink }}">{{ .Title }}</a></h2>
 
        <div class="post content">
         {{ .Content }}
