Add RSS Feed Link and mmol Support Post.

--- a/layouts/chrome/menu.html
+++ b/layouts/chrome/menu.html
@@ -4,10 +4,11 @@
             <h1 class="ten columns logo">
                 <a href="http://blog.mygluk.it/">
                     <img src="/images/logo-blog.png" gumby-retina="">
-                </a>
+                </a>                
             </h1>
             <ul class="push_two one columns">
                 <li><a href="http://www.mygluk.it"><i class="icon-rocket"></i> Glukit</a>
+                <li><a href="/index.xml"><i class="icon-rss"></i></a></li>
                 </li>                                
             </ul>
         </div>
