--- a/layouts/chrome/includes.html
+++ b/layouts/chrome/includes.html
@@ -1,6 +1,7 @@
     <link rel="stylesheet" href="/css/gumby.css">
-    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <!-- <link rel="stylesheet" href="css/style.css"> -->    
     <script src="/bower_components/gumby/js/libs/modernizr-2.6.2.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
     <script gumby-touch="js/libs" src="bower_components/gumby/js/libs/gumby.js"></script>
     <script src="bower_components/gumby/js/libs/ui/gumby.retina.js"></script>
     <script src="bower_components/gumby/js/libs/ui/gumby.fixed.js"></script>
@@ -9,6 +10,9 @@
     <script src="bower_components/gumby/js/libs/ui/gumby.checkbox.js"></script>
     <script src="bower_components/gumby/js/libs/ui/gumby.radiobtn.js"></script>
     <script src="bower_components/gumby/js/libs/ui/gumby.tabs.js"></script>
-    <script src="bower_components/gumby/js/libs/ui/gumby.navbar.js"></script>
+    <script src="bower_components/gumby/js/libs/ui/gumby.navbar.js"></script>        
     <script src="bower_components/gumby/js/libs/ui/jquery.validation.js"></script>
     <script src="bower_components/gumby/js/libs/gumby.init.js"></script>
+    <script src="bower_components/gumby/js/plugins.js"></script>
+    <script src="bower_components/gumby/js/main.js"></script>
+    <script src="js/browser.js"></script>
