--- a/layouts/chrome/menu.html
+++ b/layouts/chrome/menu.html
@@ -1,15 +1,14 @@
 <div class="navbar">
         <div class="row navbar" id="landing-navigation">
             <a class="toggle" gumby-trigger="#landing-navigation > ul" href="#"><i class="icon-menu"></i></a>
-            <h1 class="ten columns logo">
+            <h1 class="four columns logo">
                 <a href="http://blog.mygluk.it/">
                     <img src="/images/logo-blog.png" gumby-retina="">
                 </a>                
             </h1>
-            <ul class="push_two one columns">
-                <li><a href="http://www.mygluk.it"><i class="icon-rocket"></i> Glukit</a>
+            <ul class="push_two eight columns">
+                <li><a href="http://www.mygluk.it"><i class="icon-rocket"></i> Glukit</a></li>  
                 <li><a href="/index.xml"><i class="icon-rss"></i></a></li>
-                </li>                                
             </ul>
         </div>
     </div>
