--- a/layouts/chrome/menu.html
+++ b/layouts/chrome/menu.html
@@ -7,7 +7,7 @@
                 </a>                
             </h1>
             <ul class="push_two eight columns">
-                <li><a href="http://www.mygluk.it"><i class="icon-rocket"></i> Glukit</a></li>  
+                <li><a href="https://mygluk.it"><i class="icon-rocket"></i> Glukit</a></li>  
                 <li><a href="/index.xml"><i class="icon-rss"></i></a></li>
             </ul>
         </div>
